# xtea_cython

./: .flake8  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  batch.pyx  benchmarks.py  core.pyx  modes.py  pyproject.toml  setup.py  simd.pyx  xtea_batch.c  xtea_batch.h  xtea_simd.h
.github/workflows/: build-wheels.yml
tests/: test_all.py  test_compatibility.py  test_modes.py
